# library-of-alexandria

./: .gitignore  AGENTS.md  Brewfile  Dockerfile  README.md  asdf  install.sh  justfile  python-dev.md  raspberry-pi.md
apps/entrance/: .dockerignore  .env.example  .gitignore  .tool-versions  AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  docker-compose.yml  justfile  logging.json  pyproject.toml
apps/entrance/.taskmaster/: config.json
apps/entrance/.taskmaster/docs/: prd-001-home-init.md
apps/entrance/.taskmaster/tasks/: tasks.json
apps/entrance/src/entrance/: __init__.py  app.py  config.py  security.py  settings.py
apps/entrance/src/entrance/templates/: index.html
apps/entrance/tests/: test_app.py  test_config.py  test_security.py
apps/immich/: docker-compose.yaml
apps/jellyfin/: docker-compose.yaml
apps/monitoring/: config.alloy  (+2 more)
configs/: fstab  gitconfig  minidlna.conf  transmission.settings.json  wpa_supplicant.conf
cron/: music_sync.bash  reboot.bash
docs/: bootstrap_macos.md  bootstrap_pi.md  guides.md  jetson.md
dot/: .bash_aliases  .bash_profile  .bashrc  .tmux.conf  .vimrc
dotfiles/: .gitconfig  .tool-versions  .zsh_aliases  .zshenv  .zshrc  README.md
jetson_ui/: .tool-versions  Dockerfile  README.md  pyproject.toml
jetson_ui/jetson/: app.py  config.py
jetson_ui/jetson/templates/: index.html
nix/: README.md  configuration.nix  darwin-configuration.nix
scripts/: bootstrap_asdf.bash  bootstrap_brew.bash  bootstrap_dotfiles.bash  bootstrap_git.bash  bootstrap_macos.bash  bootstrap_pi.bash
(+65 files in other folders)
