[project]
name = "jetson"
version = "0.1.0"
description = "A simple webui that add links to the UIs of other services"
readme = "README.md"
authors = [
  {name = "Morten Pedersen"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.36.0",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
